# CppQuickCheck

./: CMakeLists.txt
examples/: CMakeLists.txt
include/cppqc/: Arbitrary.h  Generator.h  Test.h
